--- a/client/package.json
+++ b/client/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "pwa",
+  "name": "test-nextapp",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,20 +9,33 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@emotion/react": "^11.11.0",
-    "@emotion/styled": "^11.11.0",
-    "@mui/icons-material": "^5.11.16",
-    "@mui/material": "^5.13.4",
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
+    "@mui/icons-material": "^5.10.9",
+    "@mui/material": "^5.10.13",
+    "@mui/styles": "^5.10.15",
+    "@reduxjs/toolkit": "^1.9.3",
+    "bcryptjs": "^2.4.3",
     "eslint": "8.36.0",
     "eslint-config-next": "13.2.4",
     "next": "13.2.4",
+    "node-sass": "^6.0.1",
     "react": "18.2.0",
+    "react-cookie": "^4.1.1",
+    "react-cookie-consent": "^8.0.1",
     "react-dom": "18.2.0",
+    "react-ga4": "^1.4.1",
+    "react-redux": "^8.0.5",
+    "react-slick": "^0.28.1",
+    "redux-devtools-extension": "^2.13.9",
+    "redux-observable": "^2.0.0",
+    "redux-persist": "^6.0.0",
+    "rxjs": "^7.3.0",
+    "sass": "^1.59.3",
     "socket.io-client": "^4.6.2",
     "tss-react": "^4.4.4"
   },
   "devDependencies": {
-    "babel-eslint": "10.1.0",
     "eslint-config-airbnb": "18.1.0",
     "eslint-config-prettier": "6.11.0",
     "eslint-config-standard": "14.1.1",
@@ -32,8 +45,8 @@
     "eslint-plugin-prettier": "3.1.3",
     "eslint-plugin-promise": "4.2.1",
     "eslint-plugin-standard": "4.0.1",
+    "babel-eslint": "10.1.0",
     "prettier": "2.0.5",
-    "prettier-eslint": "9.0.1",
-    "sass": "^1.62.1"
+    "prettier-eslint": "9.0.1"
   }
 }
