--- a/client/jsconfig.json
+++ b/client/jsconfig.json
@@ -1,7 +1,11 @@
 {
+  "rootDir": "src",
   "compilerOptions": {
+    "baseUrl": "src",
     "paths": {
-      "@/*": ["./src/*"]
+      "*": [
+        "*"
+      ]
     }
   }
 }
