--- a/client/package.json
+++ b/client/package.json
@@ -27,6 +27,8 @@
     "redux-observable": "^2.0.0",
     "redux-persist": "^6.0.0",
     "rxjs": "^7.3.0",
+    "semantic-ui-css": "^2.5.0",
+    "semantic-ui-react": "^2.1.4",
     "slick-carousel": "^1.8.1",
     "socket.io-client": "^4.7.1",
     "tss-react": "^4.4.4",
