--- a/server/package.json
+++ b/server/package.json
@@ -9,7 +9,20 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "nodemon": "^2.0.22"
+    "nodemon": "^2.0.22",
+    "eslint-config-airbnb": "18.1.0",
+    "eslint-config-prettier": "6.11.0",
+    "eslint-config-standard": "14.1.1",
+    "eslint-plugin-babel": "5.3.0",
+    "eslint-plugin-import": "2.20.2",
+    "eslint-plugin-node": "11.1.0",
+    "eslint-plugin-prettier": "3.1.3",
+    "eslint-plugin-promise": "4.2.1",
+    "eslint-plugin-standard": "4.0.1",
+    "eslint": "6.8.0",
+    "babel-eslint": "10.1.0",
+    "prettier": "2.0.5",
+    "prettier-eslint": "9.0.1"
   },
   "dependencies": {
     "express": "^4.18.2",
