--- a/client/package.json
+++ b/client/package.json
@@ -9,7 +9,7 @@
     "@testing-library/user-event": "^13.5.0",
     "bcryptjs": "^2.4.3",
     "eslint-config-react-app": "^7.0.1",
-    "node-sass": "^6.0.1",
+    "node-sass": "9.0.0",
     "react": "^18.2.0",
     "react-cookie": "^4.1.1",
     "react-cookie-consent": "^8.0.1",
@@ -50,7 +50,7 @@
     "prettier-eslint": "9.0.1"
   },
   "scripts": {
-    "start": "PORT=3007 react-scripts start",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
