--- a/client/.env
+++ b/client/.env
@@ -1,2 +1,4 @@
 REACT_APP_TIMEOUT_VANISH_RESOLVED_PUZZLE = 5000
 REACT_APP_MAXIMUL_PLAYERS_IN_ROOM = 2
+# REACT_APP_SERVER_URL=http://tactmoves-api.vforvaios.gr
+REACT_APP_SERVER_URL=http://localhost:3008
