--- a/client/.env
+++ b/client/.env
@@ -1,4 +1,4 @@
 REACT_APP_TIMEOUT_VANISH_RESOLVED_PUZZLE = 5000
 REACT_APP_MAXIMUL_PLAYERS_IN_ROOM = 2
-# REACT_APP_SERVER_URL=http://tactmoves-server.vforvaios.gr
-REACT_APP_SERVER_URL=http://localhost:3008
+REACT_APP_SERVER_URL=http://tactmoves-server.vforvaios.gr
+# REACT_APP_SERVER_URL=http://localhost:3008
